--- a/main.html
+++ b/main.html
@@ -10,6 +10,57 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form id="adoptionForm" action="#" method="POST">
+	<div class="inputField">
+	<label for="name">Name</label>	
+	<input id="name" type="text" placeholder="Name"></input>
+	</div>
+		
+	<div class="inputField">
+	<label for="phone">Phone Number</label>	
+	<input id="phone" type="text" placeholder="Phone Number"></input>
+	</div>
+
+	<div class="inputField">
+	<label for="address">Address</label>	
+	<input id="address" type="text" placeholder="Address"></input>
+	</div>	
+
+	<div class="inputField check">
+		<input id="checkbox" type="checkbox" id="checkbox" value ="Have you ever lived with a Dog before?"></input>
+	<label for="checkbox">Have you ever lived with a Dog before?</label>	
+	</div>
+
+	<div class="inputField">
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
+		    <option value="Beagle">Beagle</option>
+			<option value="Labrador">Labrador</option>
+			<option value="Bulldog">Bulldog</option>
+		</select>
+	</div>
+
+<!-- 	
+
+	<div class="inputField">
+	<label for="dob">Date</label>	
+	<input id="dob" type="date" required></input>
+	</div>	 -->
+
+<!-- 	<div class="inputField">
+	<label for="password">Password</label>	
+	<input id="password" type="password" required></input>
+	</div>		
+
+	<div class="inputField">
+	<label for="portfolio">Portfolio URL</label>	
+	<input id="portfolio" type="url"></input>
+	</div>		 -->
+
+	<div class="submitBtn">
+	<button type="submit" value="submit">Submit</button>
+	</div>
+</form>
 
 </body>
 
