--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
 	</div>		 -->
 
 	<div class="submitBtn">
-	<button type="submit" value="submit">Submit</button>
+	<button id="submit" type="submit" value="submit">Submit</button>
 	</div>
 </form>
 
